force-app/main/default/objects/MDF_Calculation_Rule__mdt/MDF_Calculation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>MDF Calculation Rule</label>
    <pluralLabel>MDF Calculation Rules</pluralLabel>
</CustomObject>