force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Calculation_Model__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Model__c</fullName>
    <description>Admin-facing label for what this rule configures - the
  engine always applies the same formula (requested amount x Rate__c,
  clamped to Cap__c). "Flat Cap" implies Rate__c left blank (defaults to
  100%) with Cap__c set; "Percentage Match" implies Rate__c set with no
  Cap__c; "Tiered Match" implies multiple rule rows with different
  Minimum_Amount__c/Maximum_Amount__c brackets.</description>
    <label>Calculation Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage Match</fullName>
                <default>true</default>
                <label>Percentage Match</label>
            </value>
            <value>
                <fullName>Flat Cap</fullName>
            </value>
            <value>
                <fullName>Tiered Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>