force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <description>Maximum eligible amount this rule allows, after the
  Rate__c match is applied. Blank means no ceiling beyond the match
  rate.</description>
    <label>Cap</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>