force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry this rule applies to. Blank matches any
  industry - a universal fallback rule, so a vendor doesn't need a row per
  industry to have MDF calculation work at all.</description>
    <label>Industry</label>
    <referenceTo>Industry__mdt</referenceTo>
    <relationshipLabel>MDF Calculation Rules</relationshipLabel>
    <relationshipName>MDF_Calculation_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>