force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <description>Maximum requested amount this rule applies to. Blank means
  no upper bound.</description>
    <label>Maximum Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>