force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <description>Minimum requested amount this rule applies to. Blank means
  no lower bound.</description>
    <label>Minimum Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>