force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Match rate applied to the requested amount (e.g. 0.5 = 50%
  match). Blank defaults to 1 (100%) in the engine.</description>
    <label>Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>