force-app/main/default/objects/MDF_Calculation_Rule__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Evaluation order when multiple active rules could match
  the same request - the first match wins.</description>
    <label>Sequence</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>